# LZW_Compressing_algorithm

./: BitsManipulator.cpp  BitsManipulator.hpp  CMakeLists.txt  Dictionary.cpp  Dictionary.hpp  File_service.hpp  LZW_Archiver.cpp  LZW_Archiver.hpp  main.cpp
